# BenchMarker

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
config/: base.yaml  metrics.yaml  refine.yaml  skills.yaml
data_utils/: load_mcqa_task.py  refine_dataset.py  return_dataset.py  save_annotations.py
endpoints/: run_metrics.py  run_refine.py  run_skills.py
example_datasets/ARC/: train.csv
judge_experiments/judge_scripts/: contamination.sh  shortcuts.sh  writing_flaws.sh
judge_experiments/model/: enums.py  generation_loader.py  training_args.py  utils.py
judge_experiments/prompts/: __init__.py  prompt_builder.py  prompt_data_loader.py  prompt_template_loader.py
judge_experiments/validation_data/: contamination_judge.jsonl  shortcuts_judge.jsonl  writing_flaws_judge.jsonl
local_datasets/: load.py
local_datasets/AQUA_RAT/: test.csv  test.jsonl  train.csv  train.jsonl
local_datasets/ARC/: test.csv  test.jsonl  train.jsonl
local_datasets/CQA/: test.csv  test.jsonl  train.csv  train.jsonl
local_datasets/GoldenSwag/: test.csv  test.jsonl  train.csv  train.jsonl
local_datasets/HellaSwag/: test.csv  test.jsonl  train.csv  train.jsonl
model_utils/: irt.py  web_search.py
prompts/: contamination_prompt.py  rewrite_prompts.py  run_mcqa_prompts.py  shortcut_prompts.py  writing_flaw_prompts.py
scorers/: contamination_scorer.py  difficulty_scorer.py  shortcut_scorer.py  writing_flaws_scorer.py
scripts/: PARAMS.md  run_metrics.sh  run_refine.sh  run_skills.sh
utils/: __init__.py  argparse_config.py  cache.py  enums.py  setup.py
(+103 files in other folders)
